refactor(saved-locations): extract BaseLocationDto to eliminate code duplication and fix Sonar smells